test/fail_compilation/fail168.d

void main()
{
    int x;
    invariant(int)* p = &x;
    *p = 3;
}
